# key-remapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICES  README.md  evsieve-script.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  device-events.hpp  input-listener.cpp  input-listener.hpp  virtual-controller.cpp  virtual-controller.hpp  virtual-device.cpp  virtual-device.hpp  virtual-keyboard.cpp  virtual-keyboard.hpp
src/gui/: CMakeLists.txt  controller-view.cpp  controller-view.hpp  home.cpp  home.hpp  keyboard-view.cpp  keyboard-view.hpp  label-button.hpp
src/windows/: CMakeLists.txt  home.cpp  home.hpp
